Alignment fixes on create/update voucher page(screenshot)

--- a/apps/web-giddh/src/app/voucher/voucher.component.scss
+++ b/apps/web-giddh/src/app/voucher/voucher.component.scss
@@ -1446,8 +1446,22 @@ table.table.table-custom-invoice.basic,
 
 .amount-field,
 .balance-due-text {
-    min-width: 150px !important;
-    margin-left: 15px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0 15px;
+    column-gap: 30px;
+    align-items: center;
+    .blnc-label {
+        width: 50%;
+    }
+    .adjust-amount {
+        display: flex;
+        align-items: center;
+        column-gap: 30px;
+        justify-content: flex-end;
+        width: 50%;
+    }
 }
 
 #deposit-dropdown p {
@@ -1671,11 +1685,22 @@ span.eligible-ITC {
 }
 
 .payment-mode {
+    display: flex;
+    justify-content: space-between;
+    .payment-label {
+        text-align: right;
+        width: 40%;
+        margin-right: 10px;
+    }
     select-field {
-        float: right;
-        width: 53%;
-        margin-left: 20px;
+        width: 60%;
         text-align: left;
+    }
+    text-field {
+        width: 72%;
+        input {
+            width: 100%;
+        }
     }
 }
 
@@ -1889,12 +1914,17 @@ span.eligible-ITC {
             top: 28px;
         }
 
-        .voucher-preview-edit .custom-date-entries giddh-datepicker .mat-datepicker-toggle {
-            position: absolute;
-            right: 35%;
-            top: -3px;
-            opacity: 0;
-            z-index: 99;
+        .voucher-preview-edit {
+            .custom-date-entries giddh-datepicker .mat-datepicker-toggle {
+                position: absolute;
+                right: 35%;
+                top: -3px;
+                opacity: 0;
+                z-index: 99;
+            }
+            .multicurrency-grandtotal {
+                width: 100% !important;
+            }
         }
     }
 
